# DeeLip

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh  package-lock.json  package.json  rustfmt.toml
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  package.yml  pages.yml
assets/: OFL.txt
assets/locales/: en.json
crates/config/: Cargo.toml
crates/config/src/: account.rs  autostart.rs  contacts.rs  db.rs  dialplan.rs  history.rs  lib.rs  messages.rs  timeouts.rs
crates/config/src/account/: app_config.rs  db.rs  enums.rs  mod.rs  sip_account.rs
crates/config/tests/unit/: account_db.rs  app_config.rs  contacts.rs  db.rs  dialplan.rs  enums.rs  history.rs  messages.rs
crates/media-engine/: Cargo.toml
crates/media-engine/src/: aec.rs  agc.rs  audio.rs  codec.rs  codec_dispatch.rs  dtls_demux.rs  dtls_srtp_session.rs  dtmf.rs  engine.rs  lib.rs  recording.rs  rtp.rs  stats.rs  tasks.rs  vad.rs  video_capture.rs  video_codec.rs  video_codec_dispatch.rs  video_engine.rs  video_rtp.rs  zrtp_session.rs
crates/media-engine/tests/unit/: aec.rs  agc.rs  audio.rs  codec.rs  codec_dispatch.rs  dtls_demux.rs  dtls_srtp_session.rs  dtmf.rs  engine.rs  recording.rs  rtp.rs  stats.rs  tasks.rs  vad.rs  video_capture.rs  video_codec.rs  video_codec_dispatch.rs  video_engine.rs  video_rtp.rs  zrtp_session.rs
crates/nat/: Cargo.toml
crates/nat/src/: ice.rs  lib.rs  stun.rs  turn_relay.rs
crates/nat/tests/unit/: stun.rs
crates/sip-core/: Cargo.toml
crates/sip-core/src/: auth.rs  call.rs  calls.rs  client.rs  dialog.rs  events.rs  framing.rs  handle.rs  lib.rs  message.rs  message_method.rs  mwi.rs  registration.rs  sdp.rs  subscribe.rs  subscription.rs  transfer.rs  transport.rs  util.rs  wire.rs
crates/sip-core/src/call/: dialog.rs  lifecycle.rs  media_setup.rs  transfer.rs
crates/sip-core/src/call/lifecycle/: incoming.rs  mod.rs  outgoing.rs  reinvite.rs  response.rs  teardown.rs
crates/sip-core/src/call/lifecycle/response/: challenge.rs  connected.rs  mod.rs  session_timers.rs
crates/sip-core/src/client/: builders.rs  connect.rs  events.rs  mod.rs  run_loop.rs
crates/sip-core/src/subscription/: handlers.rs  mwi.rs  presence.rs  publish.rs
crates/sip-core/src/wire/: auth.rs  dns.rs  framing.rs  message.rs  sdp.rs  util.rs
crates/sip-core/src/wire/sdp/: build.rs  codec.rs  dtls.rs  mod.rs  parse.rs  srtp.rs  video.rs
crates/sip-core/src/zrtp/: cache.rs  crypto.rs  engine.rs  mod.rs  wire.rs
crates/sip-core/tests/unit/: auth.rs  codec.rs  dialog.rs  dns.rs  framing.rs  media_setup.rs  message.rs  mwi.rs  presence.rs  publish.rs  registration.rs  sdp.rs  transfer.rs  util.rs
crates/sip-core/tests/unit/zrtp/: cache.rs  crypto.rs  engine.rs  wire.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  call_actions.rs  event_handling.rs  frame.rs  helpers.rs  lib.rs  media.rs  notify.rs  platform.rs  ringtone.rs  strings.rs  theme.rs  tray.rs  update.rs  view_contacts.rs  view_history.rs  view_settings.rs  views.rs
crates/ui/src/helpers/: dial_target.rs  format.rs  mod.rs  pop_out_window.rs  widgets.rs
crates/ui/src/platform/: hotkeys.rs  notify.rs  ringtone.rs  tray.rs
crates/ui/src/views/: contacts.rs  dialer.rs  directory.rs  history.rs  messages.rs  settings.rs
crates/ui/src/views/dialer/: dtmf_window.rs  idle.rs  in_call.rs  mod.rs  redirect_window.rs  transfer_window.rs
crates/ui/src/views/dialer/in_call/: mod.rs  stats.rs  video.rs  widgets.rs
crates/ui/src/views/settings/: account.rs  advanced.rs  audio.rs  directory.rs  general.rs  hotkeys.rs  mod.rs  network.rs  video.rs
crates/ui/src/views/settings/account/: call_handling.rs  codecs.rs  dial_plan.rs  identity.rs  mod.rs  network.rs
crates/ui/tests/unit/: contacts.rs  directory.rs  format.rs  helpers.rs  in_call.rs  ringtone.rs  settings.rs  tray.rs  widgets.rs
crates/updater/: Cargo.toml
crates/updater/src/: lib.rs
crates/updater/tests/unit/: lib.rs
docs/: README.md  dialer-ui.md  media-pipeline.md  theming.md  windowing.md  zrtp.md
docs/changelogs/: CHANGELOG.md
docs/crates/: config.md  i18n.md  media-engine.md  nat.md  sip-core.md  ui.md  updater.md
packaging/: deelip.desktop
pages/: index.md
pages/.vitepress/: config.mts
pages/.vitepress/theme/: custom.css
pages/changelog/: 0.1.0.md  0.2.6.md  index.md
pages/contact/: index.md
pages/docs/: README.md
pages/docs/changelogs/: CHANGELOG.md
pages/docs/guide/: audio-video.md  calling-security.md  data-privacy.md  interface.md  language.md  nat.md  updates.md
pages/docs/install/: health-check.md  install.md  uninstall.md
pages/downloads/: index.md
pages/faq/: index.md
pages/troubleshooting/: index.md
scripts/: health-check.sh  install.sh  uninstall.sh
scripts/helpers/: lib.sh
src/: main.rs
wix/: License.rtf  main.wxs
