[package]
name    = "deelip-media"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow    = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
tokio     = { workspace = true }
cpal      = { workspace = true }
audiopus  = { workspace = true }
deelip-sip = { workspace = true }
webrtc-srtp = { workspace = true }
webrtc-util = { workspace = true }
fdaf-aec    = { workspace = true }
