[package]
name    = "deelip-media"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow    = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
tokio     = { workspace = true }
cpal      = { workspace = true }
audiopus  = { workspace = true }
deelip-sip = { workspace = true }
webrtc-srtp = { workspace = true }
webrtc-util = { workspace = true }
fdaf-aec    = { workspace = true }
hound       = { workspace = true }
deelip-config = { workspace = true }
audio-codec = { workspace = true }
gsm-sys      = { workspace = true }
oxideav-ilbc = { workspace = true }
oxideav-core = { workspace = true }
mp3lame-encoder = { workspace = true }
