[package]
name    = "deelip-ui"
version.workspace = true
edition.workspace = true

[dependencies]
deelip-config = { workspace = true }
deelip-sip    = { workspace = true }
deelip-media  = { workspace = true }
eframe        = { workspace = true }
egui          = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
tokio         = { workspace = true }
