[package]
name = "deelip-updater"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
semver = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
